# wgmma_interface

./: CMakeLists.txt  README.md
benchmark/: fp16_fp32.cu
benchmarks/: CMakeLists.txt  benchmark_b1_s32.cu  benchmark_fp16_fp32.cu  wgmma_benchmark_b1_s32.cu  wgmma_benchmark_fp16_fp32.cu
examples/: CMakeLists.txt  fp16_fp32.cu  wgmma_fp16_fp32.cu
include/: wgmma.h  wgmma.hpp  wgmma_b1_s32.h  wgmma_b1_s32.hpp  wgmma_common.h  wgmma_fp16_fp32.h  wgmma_fp16_fp32.hpp
