set(WGMMA_BENCHMARKS "wgmma_benchmark_fp16_fp32" "wgmma_benchmark_b1_s32")

foreach(wgmma_benchmark IN LISTS WGMMA_BENCHMARKS)
    add_executable(${wgmma_benchmark} ${wgmma_benchmark}.cu)
    target_link_libraries(${wgmma_benchmark} cudawrappers::cu)
    target_include_directories(${wgmma_benchmark} PRIVATE ${CMAKE_SOURCE_DIR}/include)
    if(WGMMA_KEEP_INTERMEDIATES)
        target_compile_options(${wgmma_benchmark} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--keep>)
    endif()
    target_compile_options(${wgmma_benchmark} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Wno-deprecated-declarations>)
endforeach()
